<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/imageView1">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="#ff5722"
                    android:layout_centerInParent="true"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_launcher_background"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/signin_hoten"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:background="@drawable/border_edittext"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColorHighlight="#dce775"
                android:hint="@string/signup_hoten"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/signin_diachi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_location_on_black_24dp"
                android:background="@drawable/border_edittext"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColorHighlight="#dce775"
                android:hint="@string/signup_diachi"
                android:layout_below="@+id/signin_hoten"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/signin_sodienthoai"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_call_black_24dp"
                android:background="@drawable/border_edittext"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColorHighlight="#dce775"
                android:hint="@string/signup_sdt"
                android:layout_below="@+id/signin_diachi"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/signin_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_email_black_24dp"
                android:background="@drawable/border_edittext"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColorHighlight="#dce775"
                android:hint="@string/signup_email"
                android:layout_below="@+id/signin_sodienthoai"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/signin_matkhau"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_lock_black_24dp"
                android:background="@drawable/border_edittext"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColorHighlight="#dce775"
                android:hint="@string/nhap_pw"
                android:layout_below="@+id/signin_email"
                android:inputType="textPassword"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/signin_nhaplaimatkhau"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_lock_black_24dp"
                android:background="@drawable/border_edittext"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColorHighlight="#dce775"
                android:hint="@string/signup_nhaplaimatkhau"
                android:layout_below="@+id/signin_matkhau"
                android:inputType="textPassword"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/btnDangKi"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/signin_nhaplaimatkhau"
                android:text="@string/signup_dangki"
                android:background="@drawable/button_pressed"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/dangki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_dangnhaplai"
                android:textSize="16sp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_below="@+id/btnDangKi"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>