<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdd23d">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="184dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/screen" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="77dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/text_login"
                android:layout_below="@+id/imageView"/>
            <EditText
                android:id="@+id/edittext_taikhoan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:background="@drawable/border_edittext"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColorHighlight="#dce775"
                android:hint="@string/nhap_tk"
                android:layout_below="@+id/imageView2"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edittext_matkhau"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_lock_black_24dp"
                android:background="@drawable/border_edittext"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColorHighlight="#dce775"
                android:hint="@string/nhap_pw"
                android:layout_below="@+id/edittext_taikhoan"
                android:inputType="textPassword"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/quenmatkhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext_matkhau"
                android:text="@string/quenmatkhau"
                android:layout_marginLeft="60dp"
                android:textSize="18sp"
                android:textColor="@drawable/mau_textview"
                />

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/quenmatkhau"
                android:text="@string/btnDangnhap"
                android:background="@drawable/btnformxoa1"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/dangki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dangkitaikhoan"
                android:textSize="16sp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_below="@+id/btnDangNhap"
                android:textColor="@drawable/mau_textview"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>