<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            android:text="@string/main"
            android:textSize="50sp"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints"
            android:shape="rectangle">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_frame">
    <ScrollView
        android:id="@+id/scrollmainhome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"

        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

        <RelativeLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorAccent"
            android:orientation="vertical">

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/cardSearch"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:layout_marginTop="25dp"-->
<!--                android:layout_marginRight="16dp"-->
<!--                app:cardCornerRadius="25dp"-->
<!--                app:cardElevation="0dp">-->

<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:background="@color/colorSearch"-->
<!--                    android:drawableStart="@drawable/ico_search"-->
<!--                    android:drawablePadding="10dp"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:padding="10dp"-->
<!--                    android:text="@string/text_search"-->
<!--                    android:textColor="@color/colorPrimaryDark"-->
<!--                    android:textSize="15sp" />-->
                <!--                còn sửa icon search nhỏ lại-->
<!--            </androidx.cardview.widget.CardView>-->

                <SearchView
                    android:id="@+id/cardSearch"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"
                    android:layout_marginTop="16dp"
                    android:queryHint="@string/text_search"/>


                        <VideoView
                            android:id="@+id/videoView"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_below="@+id/cardSearch"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="16dp" />

                        <RelativeLayout
                            android:id="@+id/cardView_sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/videoView"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="16dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_alignParentLeft="true"
                                app:cardCornerRadius="50dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_launcher_background" />
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                app:cardCornerRadius="50dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_launcher_background" />
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_alignParentRight="true"
                                app:cardCornerRadius="50dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_launcher_background" />
                            </androidx.cardview.widget.CardView>
                        </RelativeLayout>


                        <RelativeLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:layout_below="@+id/txts_pham"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginRight="16dp">
                            <!--IMG 1-->
                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/colorPrimaryDark"
                        android:contentDescription="@string/text_nike" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageView"
                        android:gravity="center_horizontal"
                        android:text="@string/text_nike" />

                </RelativeLayout>
                <!--IMG 2-->
                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/colorPrimaryDark"
                        android:contentDescription="@string/text_nike" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageView2"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/text_nike" />

                </RelativeLayout>

                <!--            IMG 3-->
                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <!--90dp = 210px-->
                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/colorPrimaryDark"
                        android:contentDescription="@string/text_nike" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageView3"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/text_nike" />

                </RelativeLayout>
            </RelativeLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/cardView_sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txts_pham"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/viewPager"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/txt_sp"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="16dp">
                <!--IMG 1-->
                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/colorPrimaryDark"
                        android:contentDescription="@string/text_nike" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageView4"
                        android:gravity="center_horizontal"
                        android:text="@string/text_nike" />

                </RelativeLayout>
                <!--IMG 2-->
                <RelativeLayout
                    android:id="@+id/relativeLayout5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/colorPrimaryDark"
                        android:contentDescription="@string/text_nike" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageView5"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/text_nike" />

                </RelativeLayout>

                <!--            IMG 3-->
                <RelativeLayout
                    android:id="@+id/relativeLayout6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <!--90dp = 210px-->
                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/colorPrimaryDark"
                        android:contentDescription="@string/text_nike" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageView6"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/text_nike" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv">
    </com.google.android.material.navigation.NavigationView>
   <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="70dp"
           android:gravity="bottom"
           android:translationY="7dp">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/main_nav"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:itemBackground="@color/colorPrimaryDark"
            app:itemIconTint="@color/nav_items"
            app:itemTextColor="@color/nav_items"
            app:menu="@menu/navbottom_items"
            />
   </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>